# FLRegressionFwr

./: .flake8  .gitignore  CICD.md  README.md  app.py  requirements.txt
.github/workflows/: README.md  ci.yml  test.yml
FLRegression/: IMPLEMENTATION_PLAN.md  README.md  client.py  dataset.py  final_model.pt  main.py  module.py  pyproject.toml  run_comparison.py  server.py
FLRegression/pytorchexample/: client_app.py  server_app.py  strategy.py  task.py
data/: FLDatasetVizu.ipynb
