[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.0.0"
description = "Federated Learning for Personal Finance Prediction with FedProx"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "torch==2.5.1+cu121",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.urls]
pytorch-cuda = "https://download.pytorch.org/whl/cu121"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-fit = 0.5          # Fraction of clients for training (client selection)
fraction-evaluate = 0.5     # Fraction of clients for evaluation
local-epochs = 3
learning-rate = 0.001       # Lower LR for Adam optimizer with regression
batch-size = 64
# FedProx configuration
proximal-mu = 0.1           # Base proximal coefficient (0 = FedAvg)
# Adaptive μ configuration
adaptive-mu-enabled = true  # Enable dynamic per-client μ adjustment
mu-min = 0.001              # Minimum allowed μ value
mu-max = 1.0                # Maximum allowed μ value
# Smart client selection configuration
selection-strategy = "hybrid"   # Options: random, diversity, hybrid
selection-temperature = 1.0     # Softmax temperature (lower = more deterministic)
hybrid-high-ratio = 0.5         # Ratio of high-divergence clients in hybrid mode
cold-start-rounds = 2           # Rounds of random selection to build history
exploration-rate = 0.1          # Probability of random selection for exploration

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 1.0 # each ClientApp will use full GPU access

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true